# lucasdurand

./: .buildinfo  .gitignore  Pipfile  README-dev.md  README.md  _config.yml  _resume_config.yml  _resume_toc.yml  _toc.yml  asset-manifest.json  config.py  contact.md  education.md  finance.md  genindex.html  html_to_pdf.mjs  index.html  intro.md  languages.ipynb  make_resume_view.py  objects.inv  package-lock.json  package.json  perimeter.md  pyproject.toml  requirements.txt  search.html  searchindex.js  service-worker.js  speaking.md  td.md  york.md  yorkta.md
.devcontainers/: devcontainer.json
.github/workflows/: build-resume-pdf.yml  deploy-jupyter-book.yaml
_ext/: jb_flags.py  only_heading_html.py
_optional_static/: force-light-theme.js  resume.css
_sources/misc/: volunteer.md
_sources/projects/: languages.ipynb
_sources/work/: aidd.md  td.md  yorkta.md
_static/: print.css  resume.css
education/: condensed.md  perimeter.html  uoft.html  uoft.md  york.html  york.md
home/: contact.md  finance.md  intro.html  intro.md  links.md  pronouns.md  resume.md
leadership/: overview.md
misc/: speaking.html  speaking.md  volunteer.html
philosophy/: data-strategy.md  what-i-build.md
projects/: languages.html
public/: index.html
scripts/: build_resume.sh
src/: App.css  App.js  Burger.css  Transition.css  index.css  interests.json  languages.json  lucas (copy).js  lucas.js  plots.js  venn.css
static/css/: main.038463e7.css  main.038463e7.css.map  (+26 more)
work/: aidd.html  condensed.md  nbfm.html  nbfm.md  td.html  td.md  work.md  yorkta.html
(+37 files in other folders)
